# OpenWeb

./: README.md
GET-request-rust/: .env  Cargo.toml  readme.md
GET-request-rust/src/: main.rs
oauth-google/: .env  package-lock.json  package.json
oauth-google/src/: App.js
oauth-google/src/components/: login.js  logout.js
