[package]
name = "GET-request-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
anyhow = "1.0"
serde_json = "1.0"
google-oauth = { version = "1" }
tokio = { version = "1", features = ["full"] }
sha256 = "1.5.0"